--- a/WebApp/templates/setup.html
+++ b/WebApp/templates/setup.html
@@ -19,7 +19,7 @@
     {% if 'funds' in request.endpoint %}
     <div class="form-group">
         <label for="code">Please enter the Overlord code to run in each Cache environment for class</label>
-        {{ form.code(size=20) }}
+        {{ form.code(size=20, value='CSCInpFunds') }}
     </div>
     {% endif %}
     <button type="submit" class="btn btn-default">Setup</button>
