adding pre-configed Overlord commands

--- a/WebApp/templates/overlord.html
+++ b/WebApp/templates/overlord.html
@@ -22,7 +22,7 @@
         {% endfor %}<br>
     </div>
     <div class="form-group">
-        {{ form.ce_diags }}
+        {{ form.ce_diags }} {{form.ce_gateway_config }}
     </div>
 </form>
 {% endblock %}
